Fixed Product alignment

--- a/client/src/styles/admin.css
+++ b/client/src/styles/admin.css
@@ -21,13 +21,14 @@ input.admin{
 .checkbox-grid li {
     display: block;
     float: left;
+    width: 25%;
     color: white;
 }
 
 .checkBox {
     padding-top: 20px;
     text-align: left;
-    font-size: 11px;
+    font-size: 12px;
     padding-inline-start: 4px;
 }
 
